// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authorize should authorize 3DS payments 1`] = `
Object {
  "error": true,
}
`;

exports[`Authorize should authorize 3DS2 payments 1`] = `
Object {
  "error": true,
}
`;

exports[`Authorize should authorize redirectShopper payments 1`] = `
Object {
  "error": true,
}
`;

exports[`Authorize should handle create payment request decisions other than accept 1`] = `
Object {
  "error": true,
}
`;

exports[`Authorize should handle the create payment request decision accept 1`] = `
Object {
  "error": true,
}
`;

exports[`Authorize should return when create payment request fails 1`] = `
Object {
  "authorized": false,
  "error": true,
  "fieldErrors": Array [],
  "serverErrors": Array [
    "mocked_error.payment.processor.not.supported",
  ],
}
`;
